--- a/publications.bib
+++ b/publications.bib
@@ -210,7 +210,6 @@
 	year = {2016},
 	keywords = {Human capital, Returns to tenure, Informal labor market},
 	pages = {2},
-	annote = {Pages 2 in PDF},
 	file = {Full Text PDF:C\:\\Users\\ioma\\Zotero\\storage\\LYI3N3L5\\Marinescu and Triyana - 2016 - The sources of wage growth in a developing country.pdf:application/pdf;Snapshot:C\:\\Users\\ioma\\Zotero\\storage\\XLBKECTI\\s40175-016-0047-9.html:text/html},
 }
 
@@ -451,7 +450,7 @@
 	author = {Marinescu, Ioana and Ouss, Ivan and Pape, Louis-Daniel},
 	month = apr,
 	year = {2021},
-	keywords = {Hires, Labor market concentration, Merger simulation, Wages},
+	keywords = {Wages, Hires, Labor market concentration, Merger simulation},
 	pages = {506--605},
 	file = {ScienceDirect Snapshot:C\:\\Users\\ioma\\Zotero\\storage\\DMDR67HF\\S0167268121000548.html:text/html},
 }
@@ -470,7 +469,7 @@
 	author = {Gaggl, Paul and Gray, Rowena and Marinescu, Ioana and Morin, Miguel},
 	month = jan,
 	year = {2021},
-	keywords = {Electrification, Structural change, Technological change},
+	keywords = {Technological change, Electrification, Structural change},
 	pages = {101944},
 	file = {Gaggl et al. - 2021 - Does electricity drive structural transformation .pdf:C\:\\Users\\ioma\\Zotero\\storage\\PMYTBH4G\\Gaggl et al. - 2021 - Does electricity drive structural transformation .pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\ioma\\Zotero\\storage\\2I97PKG7\\S0927537120301482.html:text/html},
 }
@@ -488,7 +487,7 @@
 	author = {Skandalis, Daphné and Marinescu, Ioana Elena and Massenkoff, Maxim},
 	month = apr,
 	year = {2022},
-	keywords = {inequality, race, unemployment insurance},
+	keywords = {unemployment insurance, inequality, race},
 	file = {Full Text PDF:C\:\\Users\\ioma\\Zotero\\storage\\VRF7A4TD\\Skandalis et al. - 2022 - Racial inequality in the U.S. unemployment insuran.pdf:application/pdf;Snapshot:C\:\\Users\\ioma\\Zotero\\storage\\MZXKVHJ8\\papers.html:text/html},
 }
 
@@ -507,7 +506,7 @@
 	author = {Jones, Damon and Marinescu, Ioana},
 	month = may,
 	year = {2022},
-	keywords = {Aggregate Human Capital, Aggregate Labor Productivity, Personal Income and Other Nonbusiness Taxes and Subsidies, Education, Employment, includes inheritance and gift taxes, State and Local Government: Health, Intergenerational Income Distribution, Neighborhood Characteristics, Population, Provision and Effects of Welfare Programs, Time Allocation and Labor Supply, Urban, Rural, Regional, Real Estate, and Transportation Economics: Regional Migration, Public Pensions, Welfare, Well-Being, and Poverty: Government Programs, Regional Labor Markets, Unemployment, Wages, Welfare},
+	keywords = {Wages, Unemployment, Aggregate Human Capital, Intergenerational Income Distribution, Employment, Education, Regional Labor Markets, Population, Welfare, Neighborhood Characteristics, Aggregate Labor Productivity, Personal Income and Other Nonbusiness Taxes and Subsidies, includes inheritance and gift taxes, State and Local Government: Health, Provision and Effects of Welfare Programs, Time Allocation and Labor Supply, Urban, Rural, Regional, Real Estate, and Transportation Economics: Regional Migration, Public Pensions, Welfare, Well-Being, and Poverty: Government Programs},
 	pages = {315--340},
 	file = {Snapshot:C\:\\Users\\ioma\\Zotero\\storage\\RDAXJZ3G\\articles.html:text/html},
 }
@@ -656,7 +655,7 @@
 	month = jan,
 	year = {2023},
 	note = {Publisher: The University of Chicago Press},
-	keywords = {future of work, green jobs, J23, Q52, renewable energy},
+	keywords = {J23, Q52, future of work, green jobs, renewable energy},
 	pages = {202--237},
 	file = {Full Text PDF:C\:\\Users\\ioma\\Zotero\\storage\\KYHDWKDE\\Curtis and Marinescu - 2023 - Green Energy Jobs in the United States What Are T.pdf:application/pdf},
 }
@@ -788,7 +787,7 @@
 	author = {Corcoran, Jacqueline and Marinescu, Ioana and Vogelsang, Claudia and Kim, Jessica Cho},
 	month = oct,
 	year = {2022},
-	keywords = {Depression, Low-income, Postpartum depression, Poverty, Prevalence},
+	keywords = {Poverty, Prevalence, Depression, Low-income, Postpartum depression},
 	pages = {2473--2482},
 }
 
@@ -805,7 +804,7 @@
 	author = {Handy, Femida and Marinescu, Ioana Elena and Zheng, Liuyi},
 	month = jun,
 	year = {2022},
-	keywords = {labor market, racial inequality, social capital, volunteering},
+	keywords = {social capital, labor market, racial inequality, volunteering},
 	file = {Full Text PDF:C\:\\Users\\ioma\\Zotero\\storage\\UDM2VT36\\Handy et al. - 2022 - Racial Inequality in Volunteering and Employment.pdf:application/pdf},
 }
 
@@ -862,4 +861,21 @@
 	month = jun,
 	year = {2020},
 	file = {Snapshot:C\:\\Users\\ioma\\Zotero\\storage\\KQACAZLX\\moving-from-federal-pandemic-unemployment-compensation-to-a-job-losers-stimulus-program-amid-th.html:text/html},
+}
+
+@article{athey_year_2024-1,
+	title = {The {Year} in {Review}: {Economics} at the {Antitrust} {Division} 2023–2024},
+	issn = {1573-7160},
+	shorttitle = {The {Year} in {Review}},
+	url = {https://doi.org/10.1007/s11151-024-09998-2},
+	doi = {10.1007/s11151-024-09998-2},
+	abstract = {The publication of the 2023 Merger Guidelines (MG) by the DOJ and FTC marked a significant event in the expanding influence of economics on public guidance in antitrust. The economic frameworks that are outlined in the MG are not limited to purely horizontal or vertical mergers. The MG more explicitly embrace an approach of assessing risk of harm to competition, which in turn supports the consideration of dynamic theories such as entrenchment or expansion of market power. The MG also elaborate on mergers that involve multi-product firms, platforms, and labor market competition. During this eventful year, the Division also successfully blocked JetBlue’s proposed acquisition of Spirit and obtained conduct relief to protect a specific type of labor market – chicken growers – from anticompetitive conduct by processors who compete for their services.},
+	language = {en},
+	urldate = {2024-11-05},
+	journal = {Review of Industrial Organization},
+	author = {Athey, Susan and Gross, Alex and Marinescu, Ioana and Shanefelter, Jennifer},
+	month = nov,
+	year = {2024},
+	keywords = {Airlines, Antitrust, Labor, Merger, Merger guidelines, Platforms},
+	file = {Full Text PDF:C\:\\Users\\ioma\\Zotero\\storage\\2AYPLPH9\\Athey et al. - 2024 - The Year in Review Economics at the Antitrust Div.pdf:application/pdf},
 }
